feat(`GameOperationManger`): allow concurrent operations of certain types + strings update + build bump

--- a/Mythic/Localizable.xcstrings
+++ b/Mythic/Localizable.xcstrings
@@ -1556,6 +1556,7 @@
       }
     },
     "%@" : {
+      "extractionState" : "stale",
       "localizations" : {
         "af" : {
           "stringUnit" : {
@@ -22381,6 +22382,9 @@
           }
         }
       }
+    },
+    "Running" : {
+
     },
     "scroll... or just jump down!" : {
 
